--- a/bookShelv.htm
+++ b/bookShelv.htm
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="bookShelv.css">
 </head>
 <body>
+    <div id="navall">
+        <nav id="secondnav">
+            <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
+            <img src="./image/DECOR.png"
+                style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt="">
+            <div class="box">
+                <img src="./image/icons8-search-16.png" alt="">
+                <input type="text">
+            </div>
+            <a id="login"href="./login.html">
+            <div class="box secondbox">
+                <img src="./image/icons8-user-male-64.png" alt="">
+                <h3>Hej! Log in or sign up</h3>
+            </div>
+             </a>
+            <img src="./image/icons8-shuttle-bus-50.png" style="width: 40px; height: 40px;" alt="">
+            <img src="./image/icons8-add-to-cart-64.png" style="width: 40px; height: 35px;" alt="">
+        </nav>
+
+        <nav id="thirdnav">
+            <h3 id="product">Products</h3>
+            <h3>Rooms</h3>
+            <h3 >New at IKEA</h3>
+            <h3>Offers</h3>
+        </nav>
+    </div>
     <div class="nav"></div>
     <div class="top">
         <h1>Bookcases & shelving units</h1>
