--- a/landpage.html
+++ b/landpage.html
@@ -451,7 +451,7 @@
             <a id="login"href="./login.html">
             <div class="box secondbox">
                 <img src="./image/icons8-user-male-64.png" alt="">
-                <h3>Hej! Log in or sign up</h3>
+                <h3 >Hej! Log in or sign up</h3>
             </div>
              </a>
             <img src="./image/icons8-shuttle-bus-50.png" style="width: 40px; height: 40px;" alt="">
@@ -861,4 +861,10 @@
     cut2.addEventListener("click",()=>{
         sidebarmenuproduct.style.display="none"
     })
+
+    // let userdetail=JSON.parse(localStorage.getItem("userdata"))
+    // let log=document.getElementById("log")
+    // log.innerHTML=`Hej! ${userdetail.firstname} ${userdetail.surname}`
+
+    
 </script>
