day-4 works of web

--- a/bookShelv.htm
+++ b/bookShelv.htm
@@ -16,7 +16,7 @@
                 style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt="">
             <div class="box">
                 <img src="./image/icons8-search-16.png" alt="">
-                <input type="text">
+                <input oninput="search()" id="searchBox" type="text">
             </div>
             <a id="login"href="./login.html">
             <div class="box secondbox">
