--- a/bookShelv.htm
+++ b/bookShelv.htm
@@ -26,6 +26,7 @@
              </a>
             <img src="./image/icons8-shuttle-bus-50.png" style="width: 40px; height: 40px;" alt="">
             <img src="./image/icons8-add-to-cart-64.png" style="width: 40px; height: 35px;" alt="">
+            <span id="count"></span>
         </nav>
 
         <nav id="thirdnav">
