--- a/gaming.html
+++ b/gaming.html
@@ -129,6 +129,7 @@
              #page_view{
                   margin: auto;
                   margin-left: 50%;
+                  /* background-color: #ff8c90; */
              }
              #page_view>p{
                   margin-left: 45px;
@@ -382,7 +383,86 @@ font-size: small;
 
 
 
-/* FOOTER  */
+/* media query  !!!!!!*/
+@media screen and (max-width: 900px) {
+ body{
+      background-color: #8cddff;
+
+ }
+ #gaming-menu{
+              display:flex;   
+              margin-left: 7%; 
+              
+            }
+            .menu_img{
+               width: 90%;   
+            }
+            #tittle{
+                  margin-left: 7.5%;
+                  margin-top: 10%;
+                  margin-bottom:2%;
+                  font-size: 120%;
+            }
+            .icon_pack{
+                  margin: 0%;
+           
+
+            }
+            #descrip{
+                  margin-top: 70px;
+                  margin-left:8%;
+                  text-align: left;
+                  width: 90%;
+            }
+            #descrip>h2{
+                  width: 100%;
+                  font-size:100%;
+                  margin-bottom: 2%;
+            }
+            #descrip>p{
+                  width: 100%;
+            }
+            /* mid section  */
+            #page_view{
+                  margin: auto;
+                  /* margin-left: 50%; */
+                  background-color: #ff8c90;
+             }
+             #page_view>p{
+                  margin-left: 45px;
+             }
+             #page_view>button{
+             width: 200px;
+             margin-top: 25px;
+             margin-left: 0px;
+             height: 45px;
+             border-radius: 30px;
+             border: 1px solid;
+             background-color: white;
+             }
+
+#second_des{
+      margin-left: 9%;
+      margin-top: 8%;
+      width:100%;
+}
+.second_dis{
+      display: flex;
+}
+.second_dis>p{
+     width: 50%;
+     margin-right: 28%;
+}
+.second_dis>button{
+    height: 45px;
+             border-radius: 30px;
+             border: 1px solid;
+             background-color: white;
+             width: 200px;
+}
+}
+/* media query ^^^^^^ */
+
 
 
 </style>
