--- a/landpage.html
+++ b/landpage.html
@@ -105,7 +105,7 @@
         
         <ul id="leftslidermenudetails">
             <div id="firstdiv">
-                <div id="cut4" style=" margin-top: 15px; text-align:left; margin-left: 10px; margin-bottom: 10%;"><img style="  width: 25px; height: 20px; " src="./image/icons8-x-50.png" alt=""></div>
+                <div id="cut4" style=" margin-top: 2%; text-align:left; margin-left:2%; margin-bottom: 10%;"><img style="  width: 25px; height: 20px; " src="./image/icons8-x-50.png" alt=""></div>
                 <div style="display: flex; justify-content: space-between; padding-right: 7%; padding-bottom: 8%;">
                     <h1 style="padding-left: 7%;">Hej</h1>
                     <div id="loginbtn"> Log in</div>
