--- a/gaming.html
+++ b/gaming.html
@@ -427,13 +427,17 @@ font-size: small;
                   margin: auto;
                   /* margin-left: 50%; */
                   background-color: #ff8c90;
+                  width: fit-content;
              }
              #page_view>p{
-                  margin-left: 45px;
+                  /* margin-left: 45px; */
+                  margin-left: 15%;
+                  margin-top: 0%;
+                  margin-bottom: 0%;
              }
              #page_view>button{
-             width: 200px;
-             margin-top: 25px;
+             width: 100%;
+             margin-top: 5%;
              margin-left: 0px;
              height: 45px;
              border-radius: 30px;
@@ -444,21 +448,35 @@ font-size: small;
 #second_des{
       margin-left: 9%;
       margin-top: 8%;
-      width:100%;
+      width:85%;
 }
 .second_dis{
-      display: flex;
+      display: block;
+      margin: auto;
+
 }
 .second_dis>p{
-     width: 50%;
-     margin-right: 28%;
+     width: 60%;
+     /* margin-right: 28%; */
+     border: 2px solid red;
+     font-size:100%;
+     color: black;
+     margin: auto;
+}
+#second_des>h2{
+    font-size:150%;
+    /* color: #ffcc66; */
+     border: 2px solid red;
 }
 .second_dis>button{
+      margin-top: 5%;
     height: 45px;
              border-radius: 30px;
              border: 1px solid;
              background-color: white;
-             width: 200px;
+             margin: auto;
+
+             width: 50%;
 }
 }
 /* media query ^^^^^^ */
@@ -594,7 +612,7 @@ font-size: small;
 </div>
 <!-- second menu of des and image  -->
 <div id="second_des">
-      <h2>Gaming chairs for optimal performance and maximum style
+      <h2 cla>Gaming chairs for optimal performance and maximum style
       </h2>
       <div class="second_dis" >
        <p>Whether you need a chair for your gaming station or your study spot, a gaming chair is a fantastic choice. Ergonomic and comfortable, our gaming chairs come in different styles too.
