--- a/gaming.html
+++ b/gaming.html
@@ -476,7 +476,7 @@ font-size: small;
                     style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt="">
                 <div class="box">
                     <img src="./image/icons8-search-16.png" alt="">
-                    <input type="text">
+                    <input oninput="search()" id="searchBox" type="text">
                 </div>
                 <a id="login"href="./login.html">
                 <div class="box secondbox">
@@ -527,38 +527,33 @@ font-size: small;
             <div class="filterProduct">
                   <div>
                    <div>
-                       <select name="Sort" id="sort">
+                       <select onchange="sortProd()" name="Sort" id="sort">
                            <option value="">Sort</option>
-                           <option value="bestMatch">Best match</option>
                            <option value="lth">Price: low to high</option>
                            <option value="htl">Price: high to low</option>
                            <option value="rating">Customer rating</option>
                            <option value="name">Name</option>
                            <option value="popular">Most popular</option>
-                           <option value="width">Width</option>
-                           <option value="height">Height</option>
-                           <option value="depth">Depth</option>
                         </select>
                       </div>
                       <div>
-                       <select name="category" id="category">
+                       <select onchange="sortCat()" name="category" id="category">
                            <option value="">Category</option>
-                           <option value="book">Bookcase</option>
-                           <option value="shelv">Shelving units</option>
-                           <option value="pantry">Pantry</option>
+                           <option value="desk">Gaming desk</option>
+                           <option value="chair">Gaming chair</option>
+                           <option value="bord">Pegboard</option>
+                           <option value="acc">Accessories</option>
                        </select>
                       </div>
                       <div>
-                       <select name="size" id="size">
-                           <option value="">Size</option>
-                           <optgroup label="Width">
-                           </optgroup>
-                           <optgroup label="Height"></optgroup>
-                           <optgroup label="Depth"></optgroup>
+                       <select onchange="sortName()" name="size" id="size">
+                           <option value="">Name</option>
+                           <option value="atz">A to Z</option>
+                           <option value="zta">Z to A</option>
                        </select>
                       </div>
                       <div>
-                       <select name="price" id="price">
+                       <select onchange="sortPrice()" name="price" id="price">
                            <option value="">Price</option>
                            <option value="1999">₹0 - 1,999</option>
                            <option value="2-4">₹2,000 - 3,999</option>
@@ -566,9 +561,6 @@ font-size: small;
                            <option value="6-8">₹6,000 - 7,999</option>
                            <option value="8">₹8,000+</option>
                        </select>
-                      </div>
-                      <div>
-                       <button id="allFilter">All filter</button>
                       </div>
                   </div>
                   <div>
