--- a/shelvBook.html
+++ b/shelvBook.html
@@ -9,30 +9,29 @@
 </head>
 <body>
     <!-- nav bar------------------------------------------------------------------------------------------------- -->
-    <div id="navall">
+     <div id="navall">
         <nav id="secondnav">
             <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
             <img src="./image/DECOR.png"
-                style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt="">
+                style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; margin-left: 8%;" alt="">
             <div class="box">
                 <img src="./image/icons8-search-16.png" alt="">
-                <input oninput="search()" id="searchBox" type="text">
+                <input  oninput="search()" id="searchBox" type="text">
             </div>
-            <a id="login"href="./login.html">
-            <div class="box secondbox">
+            
+            <div id="secondbox" class="box secondbox">
                 <img src="./image/icons8-user-male-64.png" alt="">
-                <h3>Hej! Log in or sign up</h3>
+                <h3 id="log">Hej! Log in or sign up</h3>
             </div>
-             </a>
-            <img src="./image/icons8-shuttle-bus-50.png" style="width: 40px; height: 40px;" alt="">
+            
+            <img src="./image/icons8-shuttle-bus-50.png" style="width: 50px; height: 40px; padding-right: 1.5%;" alt="">
             <img src="./image/icons8-add-to-cart-64.png" style="width: 40px; height: 35px;" alt="">
-            <span id="count"></span>
         </nav>
 
         <nav id="thirdnav">
             <h3 id="product">Products</h3>
             <h3>Rooms</h3>
-            <h3 >New at IKEA</h3>
+            <h3 >New at L.DECOR</h3>
             <h3>Offers</h3>
         </nav>
     </div>
