new style sheet for p tag

--- a/shelvBook.html
+++ b/shelvBook.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Shelves</title>
     <link rel="stylesheet" href="bookShelv.css">
+    <link rel="stylesheet" href="bookshelv1.css">
 </head>
 <body>
     <!-- nav bar------------------------------------------------------------------------------------------------- -->
