--- a/adminpage.html
+++ b/adminpage.html
@@ -25,7 +25,7 @@
             <hr>
             <h2 id="order">Order Details</h2>
             <hr>
-            <a href="./admincreate.html" style="color: white; text-decoration: none;"><h2 id="create">Create Profile</h2></a>
+            <h2 id="create">Create Profile</h2>
             <hr>
             <div class="okok"></div>
         </div>
@@ -46,7 +46,7 @@
                     </div>
                     <!-- Best sellers  -->
                     <div
-                        style="background-color: rgb(200, 111, 43);  display: flex; padding: 20px; align-items: center;">
+                        style="background-color: rgb(234, 145, 78);  display: flex; padding: 20px; align-items: center;">
                         <h3 style="font-size: 35px; color: rgb(128, 130, 132);">Best Sellers</h3><img
                             style="width: 150px; height: 115px;" src="./image/icons8-product-50.png" alt="">
                     </div>
