css -> css folder

--- a/gaming.html
+++ b/gaming.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Gaming furniture</title>
-      <link rel="stylesheet" href="./bookShelv.css">
+      <link rel="stylesheet" href="CSS\bookShelv.css">
       <link rel="stylesheet" href="./css/gaming.css">
       
 </head>
