--- a/shelvBook.html
+++ b/shelvBook.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Shelves</title>
-    <link rel="stylesheet" href="bookShelv.css">
-    <link rel="stylesheet" href="bookshelv1.css">
+    <link rel="stylesheet" href="CSS\bookShelv.css">
+    <link rel="stylesheet" href="CSS\bookshelv1.css">
 </head>
 <body>
     <!-- nav bar------------------------------------------------------------------------------------------------- -->
