--- a/deliveryinfo.html
+++ b/deliveryinfo.html
@@ -289,6 +289,7 @@
         orderdata.push(data)
         localStorage.setItem("orderdata",JSON.stringify(orderdata))
         console.log(orderdata)
+        alert("Your booking is confirmed you will get all details and payment recpit in your registered email account. Thank you!!")
     })
 
 
