Day- 5 change vibha

--- a/checkout.html
+++ b/checkout.html
@@ -55,7 +55,7 @@
       <div><label id="label">All prices are inclusive of taxes</label></div>
       <br>
       <br>
-      <div id="order-div"><button class="btn">Place order</button></div>
+      <div id="order-div"><button onclick="toPayment()" class="btn">Place order</button></div>
       
     </div>
   </div>
@@ -84,7 +84,7 @@
     </div>
     <div class="last-5">All prices are inclusive of taxes</div>
     <div class="logo"><img src="pay.png" alt=""></div>
-    <div class="logo-btn"><button class="btn1">Place order</button></div>
+    <div class="logo-btn"><button class="btn1" onclick="toPayment()">Place order</button></div>
   </div>
 </div>
  
