--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>L.DECOR</title>
     <link rel="stylesheet" href="./create.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
         <a id="login"href="./login.html">
         <div class="box secondbox">
             <img src="./image/icons8-user-male-64.png" alt="">
-            <h3>Hej! Log in or sign up</h3>
+            
         </div>
          </a>
         <img src="./image/icons8-shuttle-bus-50.png" style="width: 40px; height: 40px;" alt="">
