--- a/adminpage.html
+++ b/adminpage.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin page</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
     <link rel="stylesheet" href="./adminpage.css">
    
 </head>
@@ -47,12 +48,12 @@
                     <!-- Best sellers  -->
                     <div
                         style="background-color: rgb(234, 145, 78);  display: flex; padding: 20px; align-items: center;">
-                        <h3 style="font-size: 35px; color: rgb(128, 130, 132);">Best Sellers</h3><img
+                        <h3 style="font-size: 35px; color: rgb(128, 130, 132);">Best Sellers <span id="noofbestseller"></span></h3><img
                             style="width: 150px; height: 115px;" src="./image/icons8-product-50.png" alt="">
                     </div>
                     
                 </div>
-                <img style="display: block; width: 90%; margin-top: 30px;" src="./image/Slide72.jpeg" alt="">
+                <img  style="display: block; width: 90%; margin-top: 30px;" src="./image/Slide72.jpeg" alt="">
 
 
                 <!-- practice -->
