--- a/deliveryinfo.html
+++ b/deliveryinfo.html
@@ -290,6 +290,7 @@
         localStorage.setItem("orderdata",JSON.stringify(orderdata))
         console.log(orderdata)
         alert("Your booking is confirmed you will get all details and payment recpit in your registered email account. Thank you!!")
+        window.location.href="landpage.html"
     })
 
 
