--- a/deliveryinfo.html
+++ b/deliveryinfo.html
@@ -112,6 +112,10 @@
         #right {
            text-align: center;
         }
+        #confirm:hover{
+            cursor: pointer;
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
