tittle and icon

--- a/shelvBook.html
+++ b/shelvBook.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Shelves</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
     <link rel="stylesheet" href="CSS\bookShelv.css">
     <link rel="stylesheet" href="CSS\bookshelv1.css">
 </head>
@@ -13,8 +14,7 @@
      <div id="navall">
         <nav id="secondnav">
             <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
-            <img src="./image/DECOR.png"
-                style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; margin-left: 8%;" alt="">
+           <a href="./landpage.html" style="display: block;margin-left: 8%;"> <img src="./image/DECOR.png" style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%;" alt=""></a>
             <div class="box">
                 <img src="./image/icons8-search-16.png" alt="">
                 <input  oninput="search()" id="searchBox" type="text">
