day5 changes vibha

--- a/details.html
+++ b/details.html
@@ -12,8 +12,8 @@
     <div id="navall">
         <nav id="secondnav">
             <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
-            <img src="./image/DECOR.png"
-                style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; margin-left: 8%;" alt="">
+            <a href="./landpage.html" style="display: block;margin-left: 8%; "> <img src="./image/DECOR.png"
+                style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; margin-left: 8%;" alt=""></a>
             <div class="box">
                 <img src="./image/icons8-search-16.png" alt="">
                 <input type="text">
