--- a/landpage.html
+++ b/landpage.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>L.DECOR</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
     <link rel="stylesheet" href="./landpage.css">
     <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
@@ -21,8 +22,7 @@
     <div id="navall">
         <nav id="secondnav">
             <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
-            <img id="okokok" src="./image/DECOR.png"
-                style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; margin-left: 8%;" alt="">
+           <a href="./landpage.html" style="display: block; margin-left: 8%;"> <img id="okokok" src="./image/DECOR.png" style="height: 60px; width: 110px; border-radius: 7px; margin-right: 7%; " alt=""></a>
             <div class="box">
                 <img src="./image/icons8-search-16.png" alt="">
                 <input  type="text">
