--- a/create.html
+++ b/create.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L.DECOR</title>
+    <title>L.DECOR Sign Up</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
     <link rel="stylesheet" href="./create.css">
 </head>
 <body>
@@ -16,8 +17,9 @@
 <div id="navall">
     <nav id="secondnav">
         <img id="menunavimg" src="./image/icons8-menu-rounded-30.png" style="width: 35px; height: 40px; position: fixed;" alt="">
-        <img src="./image/DECOR.png"
-            style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt="">
+       <a href="./landpage.html"><img src="./image/DECOR.png"
+            style="height: 60px; width: 110px; border-radius: 7px;margin-right: 120px; margin-left: 130px;" alt=""></a> 
+       
         <div class="box">
             <img src="./image/icons8-search-16.png" alt="">
             <input type="text">
