--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L.DECOR</title>
+    <title>L.DECOR Login</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
     <link rel="stylesheet" href="./login.css">
     <script src="https://kit.fontawesome.com/af84249d9e.js" crossorigin="anonymous"></script>
 </head>
