--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>checkout</title>
+  <link rel="website icon" type="png" href="./image/Ldecor.final.png">
   <link rel="stylesheet" href="checkout.css">
 </head>
 
