--- a/details.html
+++ b/details.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./details.css" />
     
-    <title>Document</title>
+    <title>Details</title>
+    <link rel="website icon" type="png" href="./image/Ldecor.final.png">
 </head>
 <body>
     <div id="navall">
