--- a/adminpage.html
+++ b/adminpage.html
@@ -42,7 +42,7 @@
                     <!-- variety -->
                     <div
                         style="background-color: rgb(79, 185, 79);  display: flex; padding: 20px; align-items: center;">
-                        <h3 style="font-size: 35px; color: rgb(128, 130, 132);">Total Product 2</h3><img
+                        <h3 style="font-size: 35px; color: rgb(128, 130, 132);">Total Stock 2</h3><img
                             style="width: 150px; height: 115px;" src="./image/icons8-product-50.png" alt="">
                     </div>
                     <!-- Best sellers  -->
