--- a/fronted/landpage.html
+++ b/fronted/landpage.html
@@ -141,7 +141,7 @@
         </div>
         <!-- ------------------------------------------------------------------------------------------------------------ -->
         <h1 style="margin-top: 50px; margin-bottom: 25px; ">Categories for better storage and organisation</h1>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true ,"autoPlay": true}'>
             <div class="cell"><img src="https://www.ikea.com/images/66/a7/66a7ad4f93664a50fa386f545860a313.jpg?f=xxs" alt="">
             <div class="celldiv">
                 <p>Hook & wall organisation from Rs.75</p>
@@ -183,7 +183,7 @@
 
 
 
-        <div class="main-carousal" style="margin-top: 100px; margin-bottom: 100px;" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" style="margin-top: 100px; margin-bottom: 100px;" data-flickity='{ "groupCells": true,"autoPlay": true }'>
             <div class="cell2">
                 <img src="https://www.ikea.com/images/b6/15/b615d94ecd3a525330f6daebb27313f8.png?f=s" alt="">
                 <div class="lower1" id="lower1">
@@ -249,7 +249,7 @@
         </div>
         <!-- --------------------------------------------------------------------------------------------------------------------------- -->
         <h1 style="margin-top: 50px; margin-bottom: 25px;">Top furniture categories</h1>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true,"autoPlay": true }'>
             <div class="cell"><img src="https://www.ikea.com/images/sofa-and-armchairs-8c6cd2d72c5b7ffa6c50de384c9a74c8.jpg?f=xxs" alt="">
                 <div class="celldiv">
                     <p>Sofas & armchairs</p>
@@ -286,7 +286,7 @@
         </div>
         <!-- --------------------------------------------------------------------------------------------------------- -->
         <h1 style="margin-top: 50px; margin-bottom: 25px;">Top accessories categories</h1>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true,"autoPlay": true }'>
             <div class="cell"><img src="https://www.ikea.com/images/49/3e/493e241188d879a0eb919f7423a10393.jpg?f=xxs" alt="">
                 <div class="celldiv">
                     <p>Laundry & cleaning</p>
@@ -327,7 +327,7 @@
         <!-- ------------------------------------------------------------------------------------------------------------- -->
         <h1 style="margin-top: 50px; ">See how our products look in real homes!</h1>
         <p style="margin-bottom: 25px;">Share your photos on Instagram with #IKEAlifeathome or tag @ikea.india to get a chance to be seen here!</p>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true,"autoPlay": true }'>
             <div class="cell"><img src="https://www.ikea.com/ext/ingkadam/m/31c4be989b302cd6/original/UGC100002188.jpg?f=xl" alt="">
             </div>
             <div class="cell"><img style="height: 312px;" src="https://www.ikea.com/ext/ingkadam/m/71d5527a7f02d8b0/original/UGC100001389.jpg?f=xl" alt=""></div>
@@ -371,7 +371,7 @@
         </div>
         <!-- --------------------------------------------------------------------------------------------------------------- -->
         <h1  style="margin-top: 50px; margin-bottom: 25px;">Shop products for a more sustainable home</h1>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true,"autoPlay": true }'>
             <div calss="cell" style="background-color: green; color: white; padding: 50px 20px; margin-right: 20px; height: 330px;">
                 <h2>Explore our guides </h2>
                 <h2>to sustanable living</h2>
@@ -398,7 +398,7 @@
         </div>
         <!-- -------------------------------------------------------------------------------------------------------------------- -->
         <h1 style="margin-top: 50px;margin-bottom: 25px; ">Discover our services</h1>
-        <div class="main-carousal" data-flickity='{ "groupCells": true }'>
+        <div class="main-carousal" data-flickity='{ "groupCells": true ,"autoPlay": true}'>
             <div calss="cell" style=" width:260px; background-color: #0288D1; color: white; text-align: center; margin-right: 20px; height: 359px; padding: 60px 30px; width: 235px;">
                 <h2>All services</h2>
             </div>
